--- a/Salabytest/app/views/static_pages/barn/forside.html.erb
+++ b/Salabytest/app/views/static_pages/barn/forside.html.erb
@@ -88,7 +88,7 @@
   <!-- mobil meny -->
   <div id="skoleveienButtonMobil" class="small-12 columns">
     <div class="menu-option">
-      <img src="/assets/barn/menyer/Skoleveien.png" alt="skoleveien meny">
+      <img src="/assets/barn/menyer/skoleveien.png" alt="skoleveien meny">
     </div>
   </div>
   <div class="row menu" id="skoleveienMenu">
@@ -148,27 +148,27 @@
   <div class="row forste">
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/forste/Engelsk.png" alt="engelsk fag">
+        <img src="/assets/barn/skoleveien/forste/Engelsk.png" alt="engelsk fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/forste/naturfag.png" alt="naturfag fag">
+        <img src="/assets/barn/skoleveien/forste/naturfag.png" alt="naturfag fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/forste/norsk.png" alt="norsk fag">
+        <img src="/assets/barn/skoleveien/forste/norsk.png" alt="norsk fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/forste/RLE.png" alt="RLE fag">
+        <img src="/assets/barn/skoleveien/forste/RLE.png" alt="RLE fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/forste/sammfunn.png" alt="samfunnsfag">
+        <img src="/assets/barn/skoleveien/forste/sammfunn.png" alt="samfunnsfag">
       </div>
     </div>
   </div>
@@ -178,27 +178,27 @@
   <div class="row andre">
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/andre/Engelsk.png" alt="engelsk fag">
+        <img src="/assets/barn/skoleveien/andre/Engelsk.png" alt="engelsk fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/andre/naturfag.png" alt="naturfag fag">
+        <img src="/assets/barn/skoleveien/andre/naturfag.png" alt="naturfag fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/andre/norsk.png" alt="norsk fag">
+        <img src="/assets/barn/skoleveien/andre/norsk.png" alt="norsk fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/andre/RLE.png" alt="RLE fag">
+        <img src="/assets/barn/skoleveien/andre/RLE.png" alt="RLE fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/andre/sammfunn.png" alt="samfunsfag">
+        <img src="/assets/barn/skoleveien/andre/sammfunn.png" alt="samfunsfag">
       </div>
     </div>
   </div>
@@ -208,42 +208,42 @@
   <div class="row morsmaal">
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/morsmaal/Filippinsk.png" alt="Filippinsk">
+        <img src="/assets/barn/skoleveien/morsmaal/Filippinsk.png" alt="Filippinsk">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/morsmaal/Litausk.png" alt="Litausk">
+        <img src="/assets/barn/skoleveien/morsmaal/Litausk.png" alt="Litausk">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/morsmaal/Polsk.png" alt="Polsk">
+        <img src="/assets/barn/skoleveien/morsmaal/Polsk.png" alt="Polsk">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/morsmaal/Somali.png" alt="Somali">
+        <img src="/assets/barn/skoleveien/morsmaal/Somali.png" alt="Somali">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/morsmaal/Tamil.png" alt="Tamil">
+        <img src="/assets/barn/skoleveien/morsmaal/Tamil.png" alt="Tamil">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/morsmaal/Tiginja.png" alt="Tiginja">
+        <img src="/assets/barn/skoleveien/morsmaal/Tiginja.png" alt="Tiginja">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/morsmaal/Tyrkisk.png" alt="Tyrkisk">
+        <img src="/assets/barn/skoleveien/morsmaal/Tyrkisk.png" alt="Tyrkisk">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/undermenySkoleVeien/morsmaal/TilLæreren.png" alt="Til Læreren">
+        <img src="/assets/barn/skoleveien/morsmaal/TilLæreren.png" alt="Til Læreren">
       </div>
     </div>
   </div>
@@ -253,7 +253,7 @@
   <!-- mobil meny -->
   <div id="kanalSButtonMobil" class="small-12 columns">
     <div class="menu-option">
-      <img src="img/kanalS.png" alt="kanalS meny">
+      <img src="/assets/barn/menyer/kanalS.png" alt="kanalS meny">
     </div>
   </div>
   <div class="row kanalS">
@@ -261,63 +261,63 @@
       <div class="align-center">
 
         <a href="RLE_side.html">
-          <img src="img/kanalS/RLE.png" alt="RLE fag">
+          <img src="/assets/barn/kanalS/RLE.png" alt="RLE fag">
         </a>
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/kanalS/sammfunn.png" alt="samfunnsfag">
+        <img src="/assets/barn/kanalS/sammfunn.png" alt="samfunnsfag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/kanalS/grunnlovsjub.png" alt="grunnlovs jubeleums fag">
+        <img src="/assets/barn/kanalS/grunnlovsjub.png" alt="grunnlovs jubeleums fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/kanalS/historieNorge.png" alt="norgeshistorie fag">
+        <img src="/assets/barn/kanalS/historieNorge.png" alt="norgeshistorie fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/kanalS/historieEuropa.png" alt="historie om europa fag">
+        <img src="/assets/barn/kanalS/historieEuropa.png" alt="historie om europa fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/kanalS/kunst.png" alt="kunst fag">
+        <img src="/assets/barn/kanalS/kunst.png" alt="kunst fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/kanalS/matOghelse.png" alt="mat og helse fag">
+        <img src="/assets/barn/kanalS/matOghelse.png" alt="mat og helse fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/kanalS/matte.png" alt="matte fag">
+        <img src="/assets/barn/kanalS/matte.png" alt="matte fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/kanalS/naturfag.png" alt="naturfag">
+        <img src="/assets/barn/kanalS/naturfag.png" alt="naturfag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/kanalS/norsk.png" alt="norsk fag">
+        <img src="/assets/barn/kanalS/norsk.png" alt="norsk fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/kanalS/Engelsk.png" alt="engelsk fag">
+        <img src="/assets/barn/kanalS/Engelsk.png" alt="engelsk fag">
       </div>
     </div>
     <div class="large-4 small-6 columns">
       <div class="align-center">
-        <img src="img/kanalS/sammfunn.png" alt="samfunnsfag">
+        <img src="/assets/barn/kanalS/sammfunn.png" alt="samfunnsfag">
       </div>
     </div>
   </div>
@@ -327,23 +327,23 @@
   <!-- mobil meny -->
   <div id="MFLButtonMobil" class="small-12 columns">
     <div class="menu-option">
-      <img src="img/MFL.png" alt="MFL meny">
+      <img src="/assets/barn/menyer/MFL.png" alt="MFL meny">
     </div>
   </div>
   <div class="row MFL">
     <div class="large-4 small-12 columns">
       <div class="align-center">
-        <img src="img/mfl/mflbarnehage.png" alt="barnehage fag">
+        <img src="/assets/barn/mfl/mflbarnehage.png" alt="barnehage fag">
       </div>
     </div>
     <div class="large-4 small-12 columns">
       <div class="align-center">
-        <img src="img/mfl/mflmatematikk.png" alt="matematikk fag">
+        <img src="/assets/barn/mfl/mflmatematikk.png" alt="matematikk fag">
       </div>
     </div>
     <div class="large-4 small-12 columns">
       <div class="align-center">
-        <img src="img/mfl/mflnaturfag.png" alt="naturfag">
+        <img src="/assets/barn/mfl/mflnaturfag.png" alt="naturfag">
       </div>
     </div>
   </div>
